authelia/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia
  namespace: authelia
spec:
  forwardAuth:
    address: http://authelia-service.authelia.svc.cluster.local:9091/api/verify?authelia_url=https://auth.lipcloud.org/
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Name
      - Remote-Email
