authelia/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: authelia
  labels:
    app: authelia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      containers:
        - name: authelia
          image: authelia/authelia:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9091
          volumeMounts:
            - name: config-volume
              mountPath: /config/configuration.yml
              subPath: configuration.yml
            - name: users-volume
              mountPath: /config/users_database.yml
              subPath: users_database.yml
            - name: notifications
              mountPath: /config/notification.txt
              subPath: notification.txt
      volumes:
        - name: config-volume
          configMap:
            name: authelia-config
        - name: users-volume
          secret:
            secretName: authelia-users
        - name: notifications
          emptyDir: {}
