authelia/service.yml
apiVersion: v1
kind: Service
metadata:
  name: authelia-service
  namespace: authelia
  labels:
    app: authelia
spec:
  type: ClusterIP
  ports:
    - port: 9091
      targetPort: 9091
      protocol: TCP
  selector:
    app: authelia
