authelia/ingress-router.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia-ingress
  namespace: authelia
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`auth.lipcloud.org`)
      kind: Rule
      services:
        - name: authelia-service
          port: 9091
